kubernetes-yaml/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30010
