kubernetes-yaml/frontend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: Loadbalancer
  selector:
    app: fontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: pm-frontend-container
        image: karthikhegde2022/placement-manager-frontend:latest
        ports:
        - containerPort: 80
