kubernetes-yaml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: pm-frontend-container
        image: karthikhegde2022/placement-manager-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: fontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
      nodePort: 30100
