kubernetes-yaml/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service

spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
      nodePort: 30011
